stop avatar image from stretching

--- a/public/css/1_shared/header.scss
+++ b/public/css/1_shared/header.scss
@@ -48,6 +48,7 @@ li.avatar.menuItem {
 
 #avatar {
 	border-radius: 50%;
+	object-fit: cover;
 	height: 25px;
 	width: 25px;
 	position: relative;
