--- a/public/css/profile.scss
+++ b/public/css/profile.scss
@@ -103,6 +103,7 @@ input:read-only {
 #profileAvatar {
 	height: 100px;
 	width: 100px;
+	object-fit: cover;
 	border-radius: 50%;
 }
 /*# sourceMappingURL=login.css.map */
